tests/baselines/reference/decoratorOnClassMethod11(target=es2015).errors.txt
decoratorOnClassMethod11.ts(5,11): error TS2331: 'this' cannot be referenced in a module or namespace body.
decoratorOnClassMethod11.ts(5,11): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== decoratorOnClassMethod11.ts (2 errors) ====
    namespace M {
        class C {
            decorator(target: Object, key: string): void { }
    
            @(this.decorator)
              ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
              ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
            method() { }
        }
    }